Add ability to copy files to and delete files from runner
